--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,10 @@ html, body {
   text-transform: uppercase;
   text-shadow: 1px 1px 10px #000;
 }
+.carousel-caption h2 {
+  font-size: 300%;
+  text-shadow: 1px 1px 10px #000;
+}
 .carousel-caption h3 {
   font-size: 150%;
   font-weight: 500;
@@ -77,18 +81,44 @@ footer {
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
-  .carousel-caption { 
-    font-size: 0.9rem;
-  }
 }
 @media (max-width: 768px) {
-  .carousel-caption { 
-    font-size: 0.70rem;
+  .carousel-caption {
+    top: 45%;
+  }
+  .carousel-caption h1 {
+    font-size: 300%;
+  }
+  .carousel-caption h3 {
+    font-size: 100%;
+    font-weight: 400;
+    text-shadow: 1px 1px 10px #000;
+    padding-bottom: .2rem;
+  }
+  .carousel-caption .btn {
+    font-size: 95%;
+    padding: 8px 14px;
+  }
+  .display-4 {
+    font-size: 200%;
   }
 }
 @media (max-width: 576px) {
-  .carousel-caption { 
-    font-size: 0.5rem;
+  .carousel-caption {
+    top: 40%;
+  }
+  .carousel-caption h1 {
+    font-size: 250%;
+  }
+  .carousel-caption h3 {
+    font-size: 90%;
+  }
+  .carousel-caption .btn {
+    font-size: 90%;
+    padding: 4px 8px;
+  }
+  .carousel-indicators {
+    display: none;
   }
 }
 
