--- a/src/about/about.css
+++ b/src/about/about.css
@@ -7,6 +7,21 @@ html, body {
   color: #222;
 }
 
+/* Nav Bar */
+.navbar {
+    padding: 1rem;
+  }
+  .navbar-nav li {
+    padding-right: 1.5rem;
+  }
+  .nav-link {
+    font-size: 1.1em !important;
+  }
+  .dropdown .dropdown-menu {
+    border-top: 1px solid transparent;
+    background-color: #f7f7f7;
+  }
+  
 .card-img-top {
     width: 100%;
     height: 20vw;
